<resources>
<string name="app_name">Fly-Fish Log</string>
    <string name="menu_app_name">Fly-Fish Log</string>
        <string name="app_name_beta">FishingLogBeta</string>
        <string name="add_coffee">Encryption Key</string>
        <string name="fishlog_title_label">Spring Fishing</string>
        <string name="fishlog_title_hint">Enter Stream Name</string>
        <string name="partners_title_hint">Latitude - Longitude</string>
        <string name="qsf_title_hint">Qty/Species/Fly</string>
        <string name="location_desc_hint">Location Description (access point)</string>
        <string name="fishlog_details_label">Details</string>
    <string name="select_for_export">Select for limited Exporting to file</string>
    <string name="select_export_label">Select for Export</string>
    <string name="select_send_Db_report">EXPORT limited Selection\n &amp; Save/Send Database as CSV file </string>
        <string name="hide_loc_label">Send Location Description and Hatch Notes in Report</string>
        <string name="hide_photo_label">Send Photo in Report</string>
        <string name="hide_db_label">Send Db in Fishlog Report</string>
        <string name="notes_hint">Hatch Notes:</string>
        <string name="date_picker_title">Date of Fishlog:</string>
        <string name="pause">Pause Location Updates</string>
        <string name="resume">Resume Location Updates</string>
        <string name="new_entry">Create NEW Log Entry</string>
        <string name="show_view">View MAP of List</string>
        <string name="show_subtitle">Count Entry Logs</string>
        <string name="hide_subtitle">Hide Count</string>
        <string name="subtitle_format">%1$d entries</string>
        <string name="water_temp_hint">Water Temp and Weather</string>
        <string name="delete_fishlog">4.Delete this Fishlog Entry</string>
        <string name="fishlog_receipient_text">Choose Receipient</string>
        <string name="fishlog_report_text">Send Fly-Fishlog Report</string>
        <string name="fishlog_report">Stream:%1$s\n The Fly-Fishlog was created on: \n%2$s. %3$s %4$s\n</string>
        <string name="fishlog_report_hidden">The Fly-Fishlog location is hidden </string>
        <string name="fishlog_report_not_hidden">The Fly -Fshlog location is not hidden</string>
        <string name="fishlog_report_no_receipient">there is no receipient</string>
        <string name="fishlog_report_receipient">the receipient is %s</string>
        <string name="fishlog_report_subject">Fly-FishLog Report</string>
        <string name="fishlog_Db_report">This is the complete Db</string>
        <string name="fishlog_database_subject">Fly-FishLog Database Report</string>
        <string name="send_report">Send Fly-Fishlog report via</string>
        <string name="fishlog_table">Fly-Fishlog table</string>
        <string name="fishlog_intro1">INTRO</string>
        <string name="fishlog_purpose">Help Page</string>
        <string name="send_Db_report">EXPORT All\n &amp; Save/Send Database as CSV file </string>
        <string name="import_Db_report">Upload Fly-FishLogBackup.csv</string>
    <string name="title_activity_maps">Fly-FishLog</string>
    <string name="normal_map">MAP_TYPE_NORMAL</string>
    <string name="hybrid_map">MAP_TYPE_HYBRID</string>
    <string name="satellite_map">MAP_TYPE_SATELLITE</string>
    <string name="terrain_map">MAP_TYPE_TERRAIN</string>
    <string name="fishlog_intro">
        This application is for logging of technical fly-fishing trips with Google mapping support of the
        stream access points and locations on-stream. Users will be able to predict future insect
        hatches and fish behavior year to year by logging their current activities. The purpose is
        to improve fishing success by knowing what to expect during the year and where to fish from
        prior experience. \n\n

    By logging your fishing experience, it should give you the advanced knowledge for future fishing
    trips. Not every hatch occurs on every stream, nor does a hatch on a stream occur everywhere on a
        stream, nor does a hatch occur at exactly the same day each year. But history can repeat
        itself for insect behavior. By logging precise location information for specific hatches it can
        enhance your future fishing success rate. Building an information base is key to improving
        your flyfishing.\n\nObviously this application can be used for far more things than just fly fishing.
        \n\nCopyright © 2019 Driftless Software Solutions,  Version 1.27</string>
        <string name="importexport">
            <b><i>MORE INFO</i></b> \n
        1. WARNING:Keep your data secure and use encryption!  Create an Encryption Key using a word
        or phrase.  The same word/phrase used to Export (creating the file) must be used to Import
            and decrypt the same file into the database. If no Key is used, then the file will not be
        encrypted/decrypted and will be readable text. You do not have enrypt a file to use the
            import/export feature. This application uses 128-bit AES encryption. If you encrypt, be
            sure to record the key!!!\n\n
        2. By clicking the \'EXPORT All &amp; Save/Send Database as CSV file\' button (above),
        the database of logs will dump into a CSV file and can be emailed as an attachment to anyone
        you choose or saved to your My Drive, or sent via other applications. Most Android devices
        will require you to change your permissions to allow this to happen. Most importantly, you can
        use this feature to backup your data to yourself. \n\n
        3. By clicking the \'EXPORT Selection &amp; Save/Send Database as CSV file\' button (above),
        the database of only the Selected logs will dump into a CSV file and can be emailed as an attachment to anyone
        you choose or saved to your My Drive, or sent via other applications. Most Android devices
        will require you to change your permissions to allow this to happen. You can use this feature
        to send selected logs to another. \n\n

        4. IMPORT CSV button.\nWARNING:This feature is for advanced users. You could delete all your Log data.\n
        By clicking on the \'IMPORT CSV\' button (above), you will be directly uploading a file of
        Log data into the database from the Downloads directory.  Prior to IMPORT, you  must first download
            the file to your device.  Email appended files will download to the Download folder.
        To IMPORT, you must first select a RadioButton to Overwrite or to Append this data. Overwriting will drop
        (delete) all your current data from the database and then insert new data from this file.
        Appending will add this data to your existing database.\n\n
        To choose a file to import, click on the IMPORT Button, then select a CSV file from the Dialog
        screen and click Ok. This reads files that are currently in the Download folder. This import
            file must be a CSV file with the same type of data as in the
        EXPORT file. One way to generate an import CSV file that you can use, is by first using the
        EXPORT Button function to generate this file, and then emailing yourself the file. By
        opening this email on your device and saving the CSV attachment to the Downloads Directory,
        that file is now accessible (selectable) for importing.\n\n
        For Overwriting, it is extremely recommended to test the CSV data first by appending a sample
        of data prior to overwriting. Once data is deleted from the database, there is no recovery.
        If there is an error in the CSV data, this will cause major issues with your Database. Photos
        are not uploadable.\n\n

        5. If the download of the files is not working.  If you are unable to download the CSV file,
            it could be due to your email app has used up all available memory.  Sometimes, it will look
            like your file is stuck in the email app\'s Outbox.  To fix, you will need to clear out the
            memory for your email app on your device. For example, with GMail, you need to go to
            Settings -> Apps -> GMail -> Storage and click on CLEAR DATA.  Alternately, you can reboot
            your device.\n\n

        6. VIEW and DELETE Files (from menu).  This menu button will show all CSV files saved in the
        Download Storage folder. Selecting a file and choosing OK, will delete the file from Storage.
        \n\n</string>
    <string name="help_intro"><b>Select from the Menu on this page for a Help Item. There are 4 text pages and
    5 map pages plus advice on Cell Phone Connectivity.</b></string>
    <string name="purpose_new">Overview:This application is for the storage of fishing information.
    There are five pages in this application with the addition of five Google Maps routing/navigation
        pages:\n</string>
    <string name="intro">The <b>Intro page </b> (previous page) describes purpose and usage, and is the starting
        page to Help, Import/Export, and to the Log.</string>
    <string name="help"> <b>Help page </b> (this page) describes how the Logging application works and explains
        features.</string>
    <string name="import_export"><b>Import/Export Page</b> imports and/or exports your data via email. Delete
        is also supported. The following info is also found on the Import/Export page.  You can only
        import from the Download folder.</string>
    <string name="list"><b>List Page</b> shows a list of all Log entries with sorting abilities. Links to Detail
        Log page and Mapping. The Start button on the Intro page links to the List Page.</string>
    <string name="map_view"><b>\'View Map of List\'</b> (from List Page menu) shows a map with the
        current location and all GPS marked Entries in the current list (if you have logged GPS location data).</string>
    <string name="navigation"><b>Navigation - GoTo - using Google MAP\'</b> (from List Page Menu) allows the user
        to select from a list of logged locations and opens Google Maps to route you there. Offline Google
        Mapping is supported.</string>
    <string name="details"><b>Details Page</b> is the log for a particular entry. Tapping on any List page
        log entry takes you to the Details page of that entry.  Swipping left or right on a Details page, takes
        you to the next listed entry.</string>
    <string name="view"><b>View MAP - Details Page Map</b> is \'#3 View Map\' menu item of Details Page show map of logged area
        (if you have GPS location data).</string>
    <string name="loc_desc"><b>Location Description Map</b> is \'LOC LAT/LNG\' map page button.  This can generate
        the Location Field info (if service is available), accessed from the \'LOC LAT/LNG\' button
        from the Detail\'s page. This allows selection of a location from the shown map. </string>
    <string name="fishlog_start">Start</string>
    <string name="acknowledge">Acknowledgements</string>
    <string name="fishlog_acknowledge">Privacy Policy: At no time is any data collected from or
        about the user. Import/Export and Emailing or storage of data is at the sole discretion and responsibility of
        the user.\n\nI want to thank the Big Nerd Ranch group for their guidance,
        inspiration, and expertise in Android programming. I hope I got this right. Also to Google Maps for
        their amazing product, and to all the Fly-fisher people using this, \'Tight Lines\'.
    </string>
</resources>