<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017  Carl Berberich -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PeachPuff"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/fishlog_photo"
                    android:contentDescription="Photo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@android:color/darker_gray"
                    android:cropToPadding="true"
                    android:scaleType="centerInside" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/fishlog_camera"
                        android:layout_width="47dp"
                        android:layout_height="match_parent"
                        android:contentDescription="Camera"
                        android:padding="120dp"
                        android:src="@android:drawable/ic_menu_camera" />

                    <Button
                        android:id="@+id/save_photo"
                        android:layout_width="63dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_states"
                        android:text="Save\nPhoto" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">



                <TextView
                    android:id="@+id/fishlog_season"
                    style="?android:listSeparatorTextViewStyle"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/fish_log_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/fishlog_title_hint"
                    android:inputType="textCapWords|textMultiLine" />

                <Button
                    android:id="@+id/fishlog_date"
                    android:layout_marginLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/button_states"
                    android:contentDescription="Date" />


            </LinearLayout>


        </LinearLayout>


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/location_desc"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/location_desc_hint"
                android:inputType="textCapWords|textMultiLine"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/locationControllerGPS"
                android:layout_width="59dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/roundedbutton"
                android:text="Loc\nLAT/LNG"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="@+id/location_desc"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </android.support.constraint.ConstraintLayout>


        <EditText
            android:id="@+id/water_temp_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/water_temp_hint"
            android:inputType="textCapSentences|textMultiLine" />

        <EditText
            android:id="@+id/qsf_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/qsf_title_hint"
            android:inputType="textCapSentences|textMultiLine" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/notes_title"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/notes_hint"
                android:inputType="textCapSentences|textMultiLine"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <Button
                android:id="@+id/locationControllerGPS2"
                android:layout_width="59dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/roundedbutton"
                android:text="Notes\nLAT/LNG"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="@+id/notes_title"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>


        <CheckBox
            android:id="@+id/fishlog_send"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="0dp"
            android:text="@string/hide_loc_label"
            app:layout_constraintHorizontal_bias="0.038"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="4dp" />

        <CheckBox
            android:id="@+id/fishlog_send_photo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="0dp"
            android:text="@string/hide_photo_label"
            app:layout_constraintHorizontal_bias="0.038"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="4dp"
            />

        <Button
            android:id="@+id/fishlog_report"
            android:layout_width="224dp"
            android:layout_height="48dp"
            android:layout_marginBottom="20dp"
            android:text="@string/fishlog_report_text"
            android:background = "@drawable/button_states"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/crosshair_horizontal_line"
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:padding="1dp"
            android:background="@color/black"/>

        <CheckBox
            android:id="@+id/fishlog_virtual_client"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="0dp"
            android:text="@string/select_for_export"
            app:layout_constraintHorizontal_bias="0.038"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="4dp"
            />
        <TextView
            android:id="@+id/crosshair_horizontal_line1"
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:padding="1dp"
            android:background="@color/black"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</ScrollView>